--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             }
 
             body {
-                background-image: url("/hyperspace.png");
+                background-image: url("./hyperspace.png");
                 background-size: 100% 120%;
             }
 
